Helm/Vault/vault-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vault-debug
  namespace: codeserver
spec:
  serviceAccountName: default
  containers:
    - name: debug
      image: alpine:3.19
      command: ["sh", "-c", "sleep 1h"]
      volumeMounts:
        - name: sa-token
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          readOnly: true
  volumes:
    - name: sa-token
      projected:
        sources:
          - serviceAccountToken:
              path: token
              audience: "https://kubernetes.default.svc"
              expirationSeconds: 3600
          - configMap:
              name: kube-root-ca.crt
              items:
                - key: ca.crt
                  path: ca.crt
