Helm/Vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ui
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hcv.cybertronlabs.us`) # change this to your domain
      kind: Rule
      services:
        - name: vault-ui
          port: 8200
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
        - name: rate-limit
          namespace: traefik
